--- a/TeamProject-Exam/TeamProject-Exam/TeamProject-Exam.csproj
+++ b/TeamProject-Exam/TeamProject-Exam/TeamProject-Exam.csproj
@@ -69,6 +69,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data.cs" />
     <Compile Include="Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
